--- a/personal/docker-compose.yml
+++ b/personal/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     network_mode: host
     command: "npm run watch:compile"
   serve:
+    # 13.0 doesn't add content-type necessary for JS modules
     image: balthek/zola:0.12.2
     working_dir: /opt/app
     volumes:
